--- a/frontend/src/components/Product/index.css
+++ b/frontend/src/components/Product/index.css
@@ -28,3 +28,10 @@
     /* transition: 0.3ms;
     position: relative; */
 }
+.button {
+    background-color: blue;
+    color: white;
+    padding: 10px;
+    cursor: pointer;
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1);
+}
